<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login1"
            android:id="@+id/login1"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#0D415E"
            android:textStyle="bold"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login2"
            android:id="@+id/login2"
            android:layout_margin="2dp"
            android:textSize="14dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            android:hint="Your email"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:layout_gravity="center_horizontal"
            android:hint="Password"
            android:layout_marginBottom="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="GO"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"
            android:onClick="onButton1Clicked" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5">
        <!--android:background="#EAF1Fc"-->


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register1"
            android:id="@+id/register1"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:textColor="#0D415E"
            android:textStyle="bold"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register2"
            android:id="@+id/register2"
            android:layout_margin="2dp"
            android:textSize="14dp"
            />

        <EditText
            android:id="@+id/register_email1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="Your email"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/register_email2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="Confirm email" />

        <EditText
            android:id="@+id/register_pwd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:hint="Password"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/register_pwd2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_gravity="center_horizontal"
            android:hint="Confirm Password"
            android:layout_marginBottom="10dp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:id="@+id/register_button"
            android:layout_gravity="center_horizontal"
            android:onClick="onButton2Clicked" />
    </LinearLayout>

</LinearLayout>